# nf-pmc-vl-curator

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: default.yaml  nf_high_relevance.yaml  secrets.example.yaml
data/sample/: PMC9000001.xml  PMC9000002.xml  PMC9000003.xml  README.md
docs/: adapting.md  architecture.md  building_image_dataset.md  curation_app.md  data_schema.md  image_classification.md  network_access.md
src/nf_pmc_vl_curator/: __init__.py  app.py  cli.py  config.py  curation.py  gallery.py  http_client.py  materialize.py  models.py  pipeline.py
src/nf_pmc_vl_curator/agents/: __init__.py  annotator.py  downloader.py  exporter.py  extractor.py  image_modality.py  oa_checker.py  quality.py  search.py
src/nf_pmc_vl_curator/resources/: annotation_keywords.yaml
tests/: conftest.py  test_annotator.py  test_app_smoke.py  test_cli.py  test_curation.py  test_downloader.py  test_exporter.py  test_extractor.py  test_gallery.py  test_image_modality.py  test_materialize.py  test_models.py  test_oa_checker.py  test_pipeline_dryrun.py  test_quality.py
